cluster/apps/default/omada/controller/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: &name omada-controller
  labels:
    app.kubernetes.io/name: *name
subsets:
  - addresses:
      - ip: 192.168.20.50
    ports:
      - name: http
        port: 8043
        protocol: TCP
