cluster/apps/default/omada/controller/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: &name omada-controller
  labels: &labels
    app.kubernetes.io/name: *name
spec:
  selector: *labels
  ports:
  - name: http
    protocol: TCP
    port: 8043
    targetPort: http
  type: ClusterIP
